// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing LoginForm Component is logging in 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Styled(ViewNB)
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 30,
        "paddingHorizontal": 30,
        "zIndex": 2,
      }
    }
  >
    <Logo
      size={150}
    />
    <Styled(Form)
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Styled(Item)
        error={false}
        floatingLabel={true}
      >
        <Styled(Label)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "color": "#4E4A47",
              }
            }
          >
            HKU Portal UID
          </Styled(Text)>
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="ascii-capable"
          onChangeText={[Function]}
        />
      </Styled(Item)>
      <Styled(Item)
        error={false}
        floatingLabel={true}
      >
        <Styled(Label)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "color": "#4E4A47",
              }
            }
          >
            HKU Portal PIN
          </Styled(Text)>
        </Styled(Label)>
        <Styled(Input)
          onChangeText={[Function]}
          secureTextEntry={true}
        />
      </Styled(Item)>
      <Styled(Item)
        style={
          Object {
            "borderBottomWidth": 0,
            "marginTop": 15,
          }
        }
      >
        <Styled(Label)>
          <Styled(Text)
            style={
              Array [
                Object {
                  "fontSize": 10,
                  "fontStyle": "italic",
                },
                Object {
                  "color": "#4E4A47",
                },
              ]
            }
          >
            **Your PIN will NOT be saved in our database
          </Styled(Text)>
        </Styled(Label)>
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Spinner)
      inverse={true}
      size="small"
      style={
        Object {
          "height": 45,
          "marginTop": 30,
        }
      }
    />
  </Styled(ViewNB)>
  <Backdrop
    height={1334}
    style={
      Object {
        "zIndex": 1,
      }
    }
    width={750}
  />
</KeyboardAvoidingView>
`;

exports[`Testing LoginForm Component renders as expected 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Styled(ViewNB)
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 30,
        "paddingHorizontal": 30,
        "zIndex": 2,
      }
    }
  >
    <Logo
      size={150}
    />
    <Styled(Form)
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Styled(Item)
        error={false}
        floatingLabel={true}
      >
        <Styled(Label)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "color": "#4E4A47",
              }
            }
          >
            HKU Portal UID
          </Styled(Text)>
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="none"
          autoCorrect={false}
          keyboardType="ascii-capable"
          onChangeText={[Function]}
        />
      </Styled(Item)>
      <Styled(Item)
        error={false}
        floatingLabel={true}
      >
        <Styled(Label)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "color": "#4E4A47",
              }
            }
          >
            HKU Portal PIN
          </Styled(Text)>
        </Styled(Label)>
        <Styled(Input)
          onChangeText={[Function]}
          secureTextEntry={true}
        />
      </Styled(Item)>
      <Styled(Item)
        style={
          Object {
            "borderBottomWidth": 0,
            "marginTop": 15,
          }
        }
      >
        <Styled(Label)>
          <Styled(Text)
            style={
              Array [
                Object {
                  "fontSize": 10,
                  "fontStyle": "italic",
                },
                Object {
                  "color": "#4E4A47",
                },
              ]
            }
          >
            **Your PIN will NOT be saved in our database
          </Styled(Text)>
        </Styled(Label)>
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Button)
      block={true}
      dark={true}
      iconRight={true}
      onPress={[Function]}
      style={
        Object {
          "height": 45,
          "marginTop": 30,
        }
      }
      transparent={true}
    >
      <Styled(Text)>
        Login
      </Styled(Text)>
      <Styled(Icon)
        name="login"
        type="AntDesign"
      />
    </Styled(Button)>
  </Styled(ViewNB)>
  <Backdrop
    height={1334}
    style={
      Object {
        "zIndex": 1,
      }
    }
    width={750}
  />
</KeyboardAvoidingView>
`;
